add skill infomarion

--- a/index.html
+++ b/index.html
@@ -1,1 +1,417 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Datenarong Tarin">
+	<title>Datenarong</title>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="assets/styles/styles.css">
+
+</head>
+<body class="clearfix">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-sm-4 bg-warning">
+				<h1 class="text-secondary mt-4">Hi there! I'm <span class="text-dark">Yoseigi</span></h1>
+				<p class="text-muted">A DevOps engineers & full-stack web developer.</p>
+			</div>
+			<div class="col-12 col-md-8 bg-dark">
+
+				<div class="row mt-4 mb-2">
+					<div class="col">
+						<h2 class="text-light">SKILLS</h2>
+					</div>
+				</div>
+				<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Programming Language</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/go.png">
+									Go
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/node.png">
+									Nodejs
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/php.png">
+									PHP
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Frontend Framework</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-angular"></i>
+									Angular
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/jquery.png">
+									jQuery
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Backend Framework</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-laravel"></i>
+									Laravel
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/phalcon.png">
+									Phalcon
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/electron.png">
+									Electron
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Operating System</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/debian.png">
+									Debian
+								</li>
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-ubuntu"></i>
+									Ubuntu
+								</li>
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-centos"></i>
+									CentOS
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Container</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-docker"></i>
+									Docker
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Container Orchestration</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/k8s.png">
+									Kubernetes
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/swarm.png">
+									Docker Swarm
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/rancher.png">
+									Rancher
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/portainer.png">
+									Portainer
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">CI/CD Tool</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-jenkins"></i>
+									Jenkins
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Load Balancer</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/nginx.png">
+									Nginx
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/haproxy.png">
+									HAProxy
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">API Gateway</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/tyk.jpg">
+									Tyk
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Web Server</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/nginx.png">
+									Nginx
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/apache.png">
+									Apache
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Cache Server</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/redis.png">
+									Redis
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Queue Server</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/rabbitmq.png">
+									RabbitMQ
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Database Server</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/mysql.png">
+									MySQL
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/mariadb.png">
+									MariaDB
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/mongodb.png">
+									MongoDB
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/elasticsearch.png">
+									Elasticsearch
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Infrastructure Monitoring</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/newrelic.png">
+									New Relic
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/appmanager.png">
+									Applications Manager
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/prometheus.png">
+									Prometheus
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/grafana.png">
+									Grafana
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Application Monitoring</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/newrelic.png">
+									New Relic
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/appmanager.png">
+									Applications Manager
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Logs Management</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/graylog.jpeg">
+									Graylog
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Performance Test</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/jmeter.png">
+									Jmeter
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Security Scan</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/sonarqube.png">
+									SonarQube
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Cloud Providers</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/gcp.png">
+									Google Cloud
+								</li>
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-aws"></i>
+									Amazon Web Services
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-4 mb-2">
+					<div class="col">
+						<h2 class="text-light">WANT TO LEARN</h2>
+					</div>
+				</div>
+				<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Backend Framework</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/graphql.png">
+									GraphQL
+								</li>
+								<li class="list-group-item p-1">
+									<i class="ml-3 mr-1 fab fa-react"></i>
+									React
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/nextjs.png">
+									NextJS
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/nestjs.png">
+									NestJS
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col mb-3">
+						<div class="card border-dark h-100">
+							<div class="card-header bg-white">
+								<h5 class="">Service Mesh</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/istio.png">
+									Istio
+								</li>
+								<li class="list-group-item p-1">
+									<img class="ml-3 mr-1 skill-icon" src="assets/images/logo/envoy.jpg">
+									Envoy Proxy
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
+</body>
+</html>
